# Taxonomy

./: .travis.yml  ChangeLog.md  README.md  Taxonomy.cabal  changelog  stack.yaml
Biobase/: Taxonomy.hs
Biobase/Taxonomy/: Import.hs  Types.hs  Utils.hs  Visualization.hs
src/Bio/: Taxonomy.hs  TaxonomyData.hs
